feat: add .README

--- a/index.html
+++ b/index.html
@@ -59,66 +59,66 @@
   <section class="trendings container text-center" id="trendings">
     <p class="h2 text-light">Las tendencias de hoy</p>
     <div class="peliculas-tendencias row row-cols-2 row-cols-md-3 row-cols-lg-4">
-      <div class="trending-movie col">
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/alienoid.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/baghead.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/ck.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/creation-gods.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/dune.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/dune2.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/hard-hit.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/hunter.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/hunters.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/imaginary.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/kungfu.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/madame-web.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/maid-marian.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/mario.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/pandemic.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/migration.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/no-way-up.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/the-tearsmith.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/penoza.jpg" alt="">
-      </div>
-      <div class="trending-movie col">
+      </a>
+      <a href="./movie_detail.html" class="trending-movie col">
         <img src="assets/img/road-house.jpg" alt="">
-      </div>
+      </a>
     </div>
     <nav aria-label="Page navigation example">
       <ul class="pagination justify-content-center">
